<resources>

    <string name="label_delivery_boy">Delivery Boy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="action_forgot_password">Forgot password ?</string>
    <string name="label_alternate_phone_no">Alternate Phone Number</string>
    <string name="label_temporary_address">Temporary Address</string>
    <string name="label_permanent_address">Permanent Address</string>
    <string name="label_blood_group">Blood Group</string>
    <string name="label_account_no">Bank Account Number</string>
    <string name="label_bank_name">Bank Name</string>
    <string name="label_branch">Branch</string>
    <string name="action_next">Next</string>
    <string name="label_bike_no">Bike Number</string>
    <string name="label_insurance_no">Insurance Number</string>
    <string name="label_lisence_no">License Number</string>
    <string name="label_exp_date">Insurance Exp Date</string>
    <string name="action_upload_dp">Upload Profile Picture</string>
    <string name="action_complete">Complete</string>
    <string name="label_validating_account">We are validating your account details.</string>
    <string name="label_for_queries">For Queries</string>
    <string name="label_upload_rc_book">Upload RC Book Photo</string>
    <string name="label_upload_insurance">Upload Insurance Photo</string>
    <string name="label_upload_license">Upload License Photo</string>
    <string name="label_ifsc_code">IFSC Code</string>
    <string name="label_bike_model">Bike Model</string>
    <string name="label_complete_delivery">Complete Delivery</string>
    <string name="label_total_delivery">Total Delivery</string>
    <string name="label_today_delivery_count">Today Delivery Count</string>
    <string name="action_submit">Submit</string>
    <string name="action_send">Send</string>
    <string name="action_cancel">Cancel</string>
    <string name="label_select_time">Select Time</string>
    <string name="label_select_date">Select Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="label_message">Message</string>
    <string name="label_last_leave_request">Last Leave Request</string>
    <string name="action_pending">Pending</string>
    <string name="action_ok">OK</string>
    <string name="label_rc_book_no">RC Book Number</string>
    <string name="label_assigned_delivery_boys">Assigned delivery boys:</string>
    <string name="label_relax">Relax</string>
    <string name="delivery_count">Delivery Count</string>

    <string name="label_select">Select type</string>
    <string name="label_day">Day</string>
    <string name="label_time">Time</string>
    <string name="label_custom">Custom</string>
    <string name="label_no_ones_available">No ones available</string>
    <string name="label_no_leave_available">No leave request available</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="action_logout">Logout</string>
    <string-array name="type">
        <item>@string/label_select</item>
        <item>@string/label_day</item>
        <item>@string/label_time</item>
        <item>@string/label_custom</item>
    </string-array>
    
</resources>
