<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/viewHor1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountNo"
        style="@style/BankTextView"
        android:layout_marginStart="@dimen/spacing_normal"
        android:text="@string/label_account_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewHor1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBankName"
        style="@style/BankTextView"
        android:layout_marginStart="@dimen/spacing_normal"
        android:text="@string/label_bank_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountNo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBranch"
        style="@style/BankTextView"
        android:layout_marginStart="@dimen/spacing_normal"
        android:text="@string/label_branch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBankName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIFSCCode"
        style="@style/BankTextView"
        android:layout_marginStart="@dimen/spacing_normal"
        android:text="@string/label_ifsc_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBranch" />

    <View
        android:id="@+id/viewVer"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorBorder"
        app:layout_constraintBottom_toTopOf="@+id/viewHor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHor1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBikeNo"
        style="@style/BankTextView"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/label_bike_no"
        app:layout_constraintBottom_toTopOf="@+id/tvBikeModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewVer"
        app:layout_constraintTop_toBottomOf="@id/viewHor1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBikeModel"
        style="@style/BankTextView"
        android:layout_marginTop="0dp"
        android:text="@string/label_bike_model"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewVer"
        app:layout_constraintTop_toBottomOf="@id/tvBikeNo" />

    <View
        android:id="@+id/viewHor2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        app:layout_constraintTop_toBottomOf="@id/tvIFSCCode" />

</androidx.constraintlayout.widget.ConstraintLayout>