<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_normal"
    tools:context="com.example.amazondelievery.ui.credential.fragment.VehicleDetailsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBikeModel"
            style="@style/LoginTextInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBikeModel"
                style="@style/LoginEditText"
                android:hint="Bike Model" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBikeNumber"
            style="@style/LoginTextInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBikeNumber"
                style="@style/LoginEditText"
                android:hint="@string/label_bike_no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLisenceNumber"
            style="@style/LoginTextInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLisenceNumber"
                style="@style/LoginEditText"
                android:hint="@string/label_lisence_no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInsuranceNumber"
            style="@style/LoginTextInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etInsuranceNumber"
                style="@style/LoginEditText"
                android:hint="@string/label_insurance_no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInsuranceExpDate"
            style="@style/LoginTextInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etInsuranceExpDate"
                style="@style/LoginEditText"
                android:hint="@string/label_exp_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRCBoolNo"
            style="@style/LoginTextInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etRCBoolNo"
                style="@style/LoginEditText"
                android:hint="RC Book Number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/CircularButton"
            android:layout_gravity="end"
            android:text="@string/action_next"
            app:cornerRadius="@dimen/spacing_medium" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
