<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amazondelievery.ui.credential.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/nsvHolder"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-128dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_bg" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:padding="@dimen/spacing_normal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                style="@style/CredentialTitleTextView"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/label_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/LoginTextInput"
                android:layout_marginTop="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:inputType="phone"
                    style="@style/LoginEditText"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:background="@color/transparent"
                    android:drawableEnd="@drawable/icon_phone"
                    android:hint="@string/label_phone_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/LoginTextInput"
                android:paddingBottom="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmail">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    style="@style/LoginEditText"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:background="@color/transparent"
                    android:drawableEnd="@drawable/icon_key"
                    android:hint="@string/label_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/action_forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/CircularButton"
                android:text="@string/label_login"
                app:cornerRadius="@dimen/spacing_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
